fix: RegistrationForm, LoginForm, RegAPI

--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -3,7 +3,8 @@
 .inputGroup {
     position: relative;
     padding: 15px 0 0;
-    width: 50%;
+    //width: 50%;
+    width: 100%;
 }
 
 .input {
